# pymapper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  python-app.yml
docs/: conf.py  index.rst  modules.rst  pymapper.layer.base.rst  pymapper.layer.geopandas.rst  pymapper.layer.rst  pymapper.map.rst  pymapper.rst  pymapper.transformation.rst
pymapper/: __init__.py  map.py  transformation.py
pymapper/layer/: __init__.py  base.py  geopandas.py
test/: conftest.py  fixtures.py  test_base_layer.py  test_geopandas_layer.py  test_layer_type.py  test_map.py  test_transformation.py
